# bookvally-backend

./: .dev.env  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  justfile
cmd/api/: Cargo.toml
cmd/api/src/: main.rs
cmd/docs/: book_vally_schema.dbml
cmd/gen-schema/: Cargo.toml
cmd/gen-schema/src/: main.rs
cmd/worker/: Cargo.toml
cmd/worker/src/: main.rs
config/: default.toml  development.toml
crates/app/: Cargo.toml
crates/app/src/: config.rs  consumers.rs  container.rs  jobs.rs  lib.rs  routes.rs  shutdown.rs  telemetry.rs  upload.rs
crates/features/auth/: Cargo.toml
crates/features/auth/src/: events.rs  wiring.rs
crates/features/auth/src/adapters/: mod.rs  repository.rs
crates/features/auth/src/application/: login_oauth.rs  mod.rs  ports.rs  refresh_token.rs  register_device.rs  revoke_session.rs
crates/features/auth/src/domain/: device.rs  mod.rs  session.rs  token.rs
crates/features/auth/src/http/: dto.rs  mod.rs  routes.rs
crates/features/catalog/: Cargo.toml
crates/features/catalog/src/: lib.rs  wiring.rs
crates/features/catalog/src/adapters/: cloud_import.rs  consts.rs  mod.rs  parser.rs  repository.rs
crates/features/catalog/src/application/: add_book.rs  get_book.rs  import_from_cloud.rs  mod.rs  parse_file.rs  ports.rs
crates/features/catalog/src/domain/: book.rs  book_file.rs  import_job.rs  mod.rs
crates/features/catalog/src/http/: dto.rs  mod.rs  routes.rs
crates/features/discover/: Cargo.toml
crates/features/discover/src/: lib.rs
crates/features/discover/src/application/: mod.rs
crates/features/discover/src/domain/: mod.rs
crates/features/gamification/: Cargo.toml
crates/features/gamification/src/application/: mod.rs
crates/features/gamification/src/domain/: mod.rs
crates/features/plans/: Cargo.toml
crates/features/plans/src/: lib.rs  wiring.rs
crates/features/plans/src/adapters/: repository.rs
crates/features/plans/src/application/: create_plan.rs  join_group.rs  mod.rs  ports.rs  update_progress.rs
crates/features/plans/src/domain/: group.rs  mod.rs  plan_progress.rs  reading_plan.rs
crates/features/plans/src/http/: dto.rs  mod.rs  routes.rs
crates/features/profile/: Cargo.toml
crates/features/profile/src/: consumers.rs  lib.rs  wiring.rs
crates/features/profile/src/adapters/: mod.rs  repository.rs
crates/features/profile/src/application/: get_profile.rs  mod.rs  ports.rs  set_reminder.rs  update_profile.rs  update_settings.rs
crates/features/profile/src/domain/: mod.rs  profile.rs  reminder.rs  settings.rs
crates/features/profile/src/http/: dto.rs  mod.rs  routes.rs
crates/features/reader/: Cargo.toml
crates/features/reader/src/: events.rs  lib.rs  wiring.rs
crates/features/reader/src/adapters/: repository.rs
crates/features/reader/src/application/: add_bookmark.rs  create_highlight.rs  end_session.rs  list_highlights.rs  mod.rs  ports.rs  save_progress.rs
crates/features/reader/src/domain/: highlight.rs  mod.rs  progress.rs  reading_session.rs
crates/features/reader/src/http/: dto.rs  mod.rs  routes.rs
crates/features/social/: Cargo.toml
crates/features/stats/: Cargo.toml
crates/features/streaks/: Cargo.toml
crates/features/streaks/src/: lib.rs
crates/features/streaks/src/application/: mod.rs  ports.rs  record_daily_activity.rs
crates/features/streaks/src/domain/: daily_activity.rs  mod.rs  streak.rs
crates/features/tts/: Cargo.toml
crates/features/tts/src/: lib.rs  wiring.rs
crates/features/tts/src/adapters/: mod.rs  repository.rs
crates/features/tts/src/application/: get_playback.rs  list_voices.rs  mod.rs  ports.rs  synthesize.rs
crates/features/tts/src/domain/: mod.rs  playback.rs  synthesis_job.rs  voice.rs
crates/features/tts/src/http/: dto.rs  mod.rs  routes.rs
crates/platform/auth-kit/: Cargo.toml
crates/platform/auth-kit/src/: auth_user.rs  jwt.rs  lib.rs
crates/platform/cache/: Cargo.toml
crates/platform/cache/src/: cache.rs  client.rs  leaderboard.rs  lib.rs  presence.rs  rate_limiter.rs  session_store.rs  token_blacklist.rs
crates/platform/http-kit/: Cargo.toml
crates/platform/http-kit/src/: error.rs  lib.rs  router.rs
crates/platform/http-kit/src/middleware/: mod.rs  request_id.rs  tracing.rs
crates/platform/kernel/: Cargo.toml
crates/platform/kernel/src/: clock.rs  error.rs  event.rs  ids.rs  lib.rs  pagination.rs  user.rs
crates/platform/messaging/: Cargo.toml
crates/platform/messaging/src/: event_bus.rs  lib.rs
crates/platform/messaging/src/kafka/: codec.rs  consumer.rs  mod.rs  producer.rs  topics.rs
crates/platform/persistence/: Cargo.toml
crates/platform/persistence/src/: lib.rs  migrate.rs  pool.rs  tx.rs
crates/platform/storage/: Cargo.toml
crates/platform/storage/src/: cloud_r2.rs  lib.rs  port.rs
crates/platform/storage/tests/: r2_test.rs
crates/platform/telemetry/: Cargo.toml
deploy/: kafka-topics.yaml  otel-collector.yaml
migrations/: 2026010001_identity.down.sql  2026010001_identity.up.sql  2026010002_profile_session.down.sql  2026010002_profile_session.up.sql  2026010003_catalog_files.down.sql  2026010003_catalog_files.up.sql  2026010004_library_reading.down.sql  2026010004_library_reading.up.sql  2026010005_tts.down.sql  2026010005_tts.up.sql  2026010006_streaks_gamification.down.sql  2026010006_streaks_gamification.up.sql  2026010007_reading_plans.down.sql  2026010007_reading_plans.up.sql  2026010008_social.down.sql  2026010008_social.up.sql  2026010009_analytics_read_models.down.sql  2026010009_analytics_read_models.up.sql  2026010010_session_handle.down.sql  2026010010_session_handle.up.sql  2026062801_book_text_chunks.down.sql  2026062801_book_text_chunks.up.sql
