[package]
name    = "auth-kit"
version.workspace = true
edition.workspace = true

[dependencies]
kernel       = { workspace = true }
axum         = { workspace = true }
jsonwebtoken = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
async-trait  = { workspace = true }
axum-extra = { workspace = true }
