[package]
name    = "messaging"
version.workspace = true
edition.workspace = true

[dependencies]
kernel     = { workspace = true }
rdkafka    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
async-trait = { workspace = true }
