[package]
name    = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx   = { workspace = true }
anyhow = { workspace = true }
aws-config =  { workspace = true}
aws-sdk-s3 = {workspace = true}
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
aws-smithy-types = "1.5.0"