[package]
name    = "telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
kernel                = { workspace = true }
tracing               = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry_sdk     = { workspace = true }
opentelemetry-otlp    = { workspace = true }
tracing-opentelemetry = { workspace = true }
